@@ -81,7 +81,7 @@ int FCEU_fisarchive(FCEUFILE*);
 void GetFileBase(const char *f);
 std::string FCEU_GetPath(int type);
 std::string FCEU_MakePath(int type, const char* filebase);
-std::string FCEU_MakeFName(int type, int id1, char *cd1);
+std::string FCEU_MakeFName(int type, int id1, const char *cd1);
 void FCEU_SplitArchiveFilename(std::string src, std::string& archive, std::string& file, std::string& fileToOpen);
 
 #define FCEUMKF_STATE        1
